kubernetes/apps/observability/victoria-metrics/app/vmsingle-lb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vmsingle-direct
  labels:
    app.kubernetes.io/name: victoria-metrics
    app.kubernetes.io/component: vmsingle-lb
spec:
  type: LoadBalancer
  loadBalancerIP: "192.168.22.141"
  ports:
    - name: http
      port: 8428
      targetPort: 8428
      protocol: TCP
  selector:
    app.kubernetes.io/name: vmsingle
    app.kubernetes.io/instance: vmstack
    app.kubernetes.io/component: monitoring
